--- a/src/components/ui/ButtonDecesos/Button.module.css
+++ b/src/components/ui/ButtonDecesos/Button.module.css
@@ -10,7 +10,7 @@
 	border-radius: var(--buttons-border-radius);
 	border: 1px solid var(--primary-500);
 	box-shadow: 20px 25px 60px rgba(0, 152, 58, 0.15);
-	/* width: 100%; */
+	width: 100%;
 	padding: 10px;
 	height: 58px;
 	cursor: pointer;
